# rover_nav_gui_ws

./: .~lock.Lat_Long_Converter.ods#  Lat_Long_Converter.ods
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/nav_gui/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/nav_gui/include/nav_gui/: display.cpp  display.h  rover.cpp  rover.h  waypoint.h
src/nav_gui/screenshots/: .~lock.Map_Init_File_Generator.ods#  Map_Init_File_Generator.ods  mapInit.txt  mapInit.txt.save  roverData.txt  waypoints.txt
src/nav_gui/screenshots/initFiles/: BYU_quad_waypoints.txt  Quad2_mapInit.txt  initializeMap.sh  initializeMap.sh~  mapInit.txt  roverData.txt  waypoints.txt  waypoints.txt~
src/nav_gui/screenshots/initFiles/AstronautAssistFull/: mapInit.txt
src/nav_gui/screenshots/initFiles/AstronautAssistZoom1/: mapInit.txt
src/nav_gui/screenshots/initFiles/AstronautAssistZoom2/: mapInit.txt  waypoints.txt
src/nav_gui/screenshots/initFiles/BYU_cannon_center/: mapInit.txt  waypoints.txt  waypoints.txt~
src/nav_gui/screenshots/initFiles/BYU_quad/: mapInit.txt  waypoints.txt~
src/nav_gui/screenshots/initFiles/Biology_Terrain/: anchor.txt  mapInit.txt  waypoints.txt
src/nav_gui/screenshots/initFiles/Rock_Quarry/: mapInit.txt  waypoints.txt
src/nav_gui/src/: display.cpp  display.cpp~  display.h  display.h~  main.cpp  nav_publisher.cpp  nav_publisher.cpp~  nav_subscriber.cpp  nav_subscriber.cpp~  patch.cpp  patch.cpp~  patch.h  rover.cpp~  screenshot.cpp  screenshot.cpp~  screenshot.h  screenshot.h~  waypoint.cpp  waypoint.cpp~  waypoint.h  waypoint.h~
(+129 files in other folders)
